--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -69,6 +69,7 @@ main {
         left:1em;
         padding-bottom: 1em;
         border-bottom:1px solid #E0E4DF;
+        text-align: left;
         a {
           text-decoration: none;
           color: #0095C7;
@@ -181,6 +182,7 @@ main {
         border-bottom:1px solid #E0E4DF;
         padding-bottom: 1em;
         font-size: 13px;
+        text-align: left;
         a { text-decoration: none;
           color:#0095C7;
         &:hover {
@@ -199,7 +201,7 @@ main {
         color: #0095C7;
         border-bottom:1px solid #E0E4DF;
         padding-bottom: 1.5em;
-
+        text-align: left;
         a {
           text-decoration: none;
           color: #0095C7;
@@ -220,6 +222,7 @@ main {
         bottom:2.5em;
         color: #0095C7;
         padding-bottom: 1.5em;
+        text-align: left;
 
         input {
           color:black;
